# dns-encrypted-proxy

./: .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  BENCHMARKING.md  CMakeLists.txt  Dockerfile  Dockerfile.ci-test  LICENSE  Manual.md  README.md  TESTING.md  TODO-STANDARDS.md  dns-encrypted-proxy.conf.example  doh-proxy.conf.example
grafana/: dns-encrypted-proxy-dashboard.json
src/: cache.c  cache.h  config.c  config.h  dns_message.c  dns_message.h  dns_server.c  dns_server.h  doh_client.c  doh_client.h  errors.c  errors.h  iterative_resolver.c  iterative_resolver.h  logger.c  logger.h  main.c  metrics.c  metrics.h  upstream.c  upstream.h  upstream_bootstrap.c  upstream_bootstrap.h  upstream_dispatch.c  upstream_dispatch.h  upstream_doh.c  upstream_doh.h  upstream_doq.c  upstream_doq.h  upstream_doq_ngtcp2.c  upstream_doq_ngtcp2.h  upstream_dot.c  upstream_dot.h  version.h.in
tests/: test_fixtures.h  test_helpers.h
tests/certs/: localhost-openssl.cnf  localhost.cert.pem  localhost.key.pem
tests/integration/: test_integration.c
tests/unit/: test_cache.c  test_cache_internal.c  test_config.c  test_dns_message.c  test_dns_message_internal.c  test_dns_server_internal.c  test_errors.c  test_iterative_resolver_internal.c  test_metrics_internal.c  test_upstream.c  test_upstream_bootstrap_internal.c  test_upstream_dispatch_internal.c  test_upstream_doh_internal.c  test_upstream_doq_internal.c  test_upstream_doq_ngtcp2_internal.c  test_upstream_dot_internal.c  test_upstream_internal.c
tools/: cache_bench.c  check_stack_usage.sh  ci_test_matrix.sh  e2e_proxy_bench.c  mock_doh_server.py  mock_doq_server.py  run_ci_tests_docker.sh  run_clang_tidy.sh
